fixes jumping lines (#4782)
* fixes

* fix template

* fix frss.css

* fix Nord theme

--- a/p/themes/Mapco/_list-view.scss
+++ b/p/themes/Mapco/_list-view.scss
@@ -15,7 +15,6 @@
 
 		&:not(.current):hover .item.title {
 			background: variables.$grey-lighter;
-			bottom: 3px;
 		}
 	}
 
@@ -69,10 +68,6 @@
 		a {
 			color: variables.$main-font-color;
 			opacity: 0.75;
-		}
-
-		.favicon {
-			padding: 5px;
 		}
 	}
 
