--- a/p/themes/Nord/nord.css
+++ b/p/themes/Nord/nord.css
@@ -557,7 +557,12 @@ li.item.active {
 }
 
 .flux .website .favicon {
-	padding: 3px;
+	padding: 0.25rem;
+	position: absolute;
+}
+
+.flux .website span {
+	margin-left: 2rem;
 }
 
 .flux .item.date {
@@ -579,10 +584,6 @@ li.item.active {
 
 }
 
-.flux .item {
-	line-height: 30px;
-}
-
 .flux.current {
 	background: var(--accent-bg);
 }
@@ -590,7 +591,6 @@ li.item.active {
 .flux:not(.current):hover .item.title {
 	background: var(--accent-bg);
 	transition: .4s;
-	bottom: 0;
 }
 
 .flux .item.title a {
