--- a/p/themes/base-theme/frss.rtl.css
+++ b/p/themes/base-theme/frss.rtl.css
@@ -1124,6 +1124,11 @@ input[type="search"] {
 	white-space: nowrap;
 }
 
+.flux .flux_header .item .item-element {
+	padding: 0.5rem 0;
+	line-height: 1.5rem;
+}
+
 .flux .item.manage,
 .flux .item.link {
 	width: 40px;
@@ -1149,7 +1154,6 @@ a.website:hover .favicon {
 	background-color: var(--frss-background-color);
 	max-width: calc(100% - 320px);
 	position: absolute;
-	bottom: 2px;
 }
 
 .flux:not(.current):hover .item.title.multiline {
@@ -1218,7 +1222,6 @@ a.website:hover .favicon {
 .flux .item.title .author {
 	padding-right: 1rem;
 	color: var(--frss-font-color-grey-dark);
-	font-size: 0.9rem;
 	font-weight: normal;
 }
 
